Update Supabase URL and key in index.html
Updated Supabase configuration with new URL and key.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 <script>
     // --- CONFIGURACIÓN DE SUPABASE (¡CAMBIA ESTO!) ---
-    const SUPABASE_URL = 'AQUI_TU_URL_DE_SUPABASE';
-    const SUPABASE_KEY = 'AQUI_TU_KEY_ANON_DE_SUPABASE';
+    const SUPABASE_URL = 'https://hviansyzbyzkfdmgujah.supabase.co';
+    const SUPABASE_KEY = 'sb_publishable_sfFASSOkI15dXpf5vulSRQ_f5EZTW4_';
     
     const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
     // --------------------------------------------------
