--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <button class="btn-qty" onclick="adjustQty(1)">+</button>
         </div>
         <div id="qty-controls-kg" class="qty-controls" style="display:none;">
-            <input type="number" id="inp-qty-kg" placeholder="0.000" step="0.001"> 
+            <input type="text" inputmode="numeric" id="inp-qty-kg" placeholder="0.000" step="0.001">
             <span style="font-weight:bold;">kg</span>
         </div>
     </div>
