--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Scanner Pro V35.2</title>
+    <title>Scanner Pro V35.3</title>
     
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#2e7d32">
@@ -107,8 +107,8 @@
         .modal-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; border-bottom: 1px solid #f0f0f0; padding-bottom: 10px; }
         input, select { width: 100%; padding: 14px; border: 1.5px solid #eee; border-radius: 12px; font-size: 1rem; box-sizing: border-box; margin-bottom: 12px; outline: none; }
         .modal-btns { display: flex; gap: 10px; margin-top: 15px; }
-        .btn-confirm { flex: 2; background: #2e7d32; color: white; padding: 16px; border: none; border-radius: 12px; font-weight: bold; }
-        .btn-cancel { flex: 1; background: #f5f5f5; color: #666; padding: 16px; border: none; border-radius: 12px; font-weight: bold; }
+        .btn-confirm { flex: 2; background: #2e7d32; color: white; padding: 16px; border: none; border-radius: 12px; font-weight: bold; font-size: inherit; }
+        .btn-cancel { flex: 1; background: #f5f5f5; color: #666; padding: 16px; border: none; border-radius: 12px; font-weight: bold; font-size: inherit; }
 
         /* COMPARADOR DE CANASTA */
         .store-comparison-card { background: #fff; border: 1.5px solid #eee; border-radius: 16px; padding: 15px; margin-bottom: 12px; display: flex; flex-direction: column; gap: 8px; }
