--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MiCarrito V35.42</title>
+    <title>MiCarrito V35.43</title>
     
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#2e7d32">
@@ -334,7 +334,8 @@
     </div>
     
     <div id="qty-controls-kg" class="qty-wrapper" style="display:none; padding: 15px; background: #f8faf9; border-radius: 12px;"><input type="text" inputmode="numeric" id="inp-qty-kg" style="width: 100px; text-align: center; margin:0;" oninput="formatKgInput(this)"><b>kg</b></div>
-    <button class="btn-confirm" style="width:100%; margin-top: 15px;" onclick="saveAndAdd()">GUARDAR 🛒</button>
+    <button class="btn-cancel" style="width:50%; margin-top: 15px;" onclick="closeAllModals()">CANCELAR</button>
+    <button class="btn-confirm" style="width:50%; margin-top: 15px;" onclick="saveAndAdd()">GUARDAR</button>
 </div>
 
 <div id="toast"></div>
